# dotnet_checker

./: Cargo.toml  README.md
src/: framework.rs  frameworks.rs  main.rs  windows.rs
