[package]
name = "dotnet_checker"
version = "1.0.1"
edition = "2021"

[dependencies]
winreg = { version = "0.10.1", features = ["transactions"] }
execute = "0.2.11"
press-btn-continue = "0.1.1"
winconsole = "0.11.1"
winapi = { version = "0.3.9", features = [
    "handleapi",
    "processthreadsapi",
    "winnt",
    "securitybaseapi",
    "impl-default",
] }
try-catch = "0.2.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1